fix deprecations, fix Instant and URI mocks